--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body {
-    color: blue;
+    background: #fcfafa;
+    color: rgb(0, 0, 0);
     text-align: center;
     font-family: "arial";
     font-size: 16px;
@@ -8,12 +9,17 @@ body {
 }
 
 #cabecera {
-    background: blue;
-    box-shadow:  0px 2px 20px 0px rgba(0,0,0);
-    color: white;
+    background: rgb(98, 98, 180);
+    box-shadow:  0px 2px 20px 0px rgb(235, 224, 224);
+    color: rgb(0, 0, 0);
     font-weight: bold;
     margin: 0;
     padding: 0.5cm;
+}
+
+#cabecera #logo{
+    width: 40px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline{
@@ -27,7 +33,7 @@ body {
     width: 70%;
     padding: 1cm;
     text-align: left;
-    border: 1px solid white;
+    border: 1px solid rgb(0, 0, 0);
     margin: 0 auto;
 }
 
@@ -35,4 +41,8 @@ body {
     font-size: 20px;
 }
 
+#post {
+    background: rgb(255, 255, 255);
+    padding: 1em;
+}
 
